--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1976,6 +1976,8 @@
             <meta-data android:name="com.android.settings.TOP_LEVEL_HEADER_ID"
                        android:resource="@id/display_and_lights_settings" />
         </activity-alias>
+        <!-- DarkKat activities Start -->
+        <activity android:name=".darkkat.LockScreen" />
 
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
