--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1977,6 +1977,12 @@
                        android:resource="@id/display_and_lights_settings" />
         </activity-alias>
 
+        <receiver android:name="com.android.settings.euphoria.OnBoot">
+            <intent-filter>
+                <action android:name="android.intent.action.BOOT_COMPLETED"/>
+            </intent-filter>
+        </receiver>
+
         <!-- Pseudo-activity used to provide an intent-filter entry point to encryption settings -->
         <activity android:name="Settings$CryptKeeperSettingsActivity"
                 android:label="@string/crypt_keeper_encrypt_title">
